--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "rewrites": [
-  
-    { "source": "/bybaelcollection.tk:", "destination": "bybaelcollection.000webhostapp.com/" },
-       ]
+    { "source": "/about", "destination": "/about-our-company.html" },
+    { "source": "/resize/:width/:height", "destination": "/api/sharp" },
+    { "source": "/user/:id", "destination": "/api/user" },
+    { "source": "/proxy/:match*", "destination": "https://example.com/:match*" }
+  ]
 }
