--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "rewrites": [
-    { "source": "/about", "destination": "/about-our-company.html" },
-    { "source": "/resize/:width/:height", "destination": "/api/sharp" },
-    { "source": "/user/:id", "destination": "/api/user" },
-    { "source": "/proxy/:match*", "destination": "https://example.com/:match*" }
+    { "source": "/:match*", "destination": "/https://bybaelcollection.000webhostapp.com/:match*" }
+
   ]
 }
